--- a/src/gazap-site/src/main/webapp/render-wrime/landscape/shared/html-bars-account.html
+++ b/src/gazap-site/src/main/webapp/render-wrime/landscape/shared/html-bars-account.html
@@ -6,7 +6,7 @@ ${set m=eVisitor}
     ${if(m.logged)}
     <div class="account-name">
         <a class="username" href="${cp}${m.user.route}">
-            <img src="http://www.gravatar.com/avatar/${m.user.gravatar}?s=16" alt="" width="16" height="16"/>
+            <img src-async="http://www.gravatar.com/avatar/${m.user.gravatar}?s=16" alt="" width="16" height="16"/>
             <span>
             ${if(m.user.name.length gt 0)}${m.user.name}
             ${else}${l18n:t('tb.menu.welcome.anonymous.name')}
@@ -40,10 +40,12 @@ ${set m=eVisitor}
         <div class="clear"></div>
     </div>
     <script type="text/javascript">
-        $('#accountBar .account-menu > .opener .toggler').click(function () {
-            $('#accountBar .account-menu').toggleClass('expanded');
-            return false;
-        });
+        head('jquery', function () {
+            $('#accountBar .account-menu > .opener .toggler').click(function () {
+                $('#accountBar .account-menu').toggleClass('expanded');
+                return false;
+            });
+        })
     </script>
     ${else}
     <h3>
